--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
     "mongoose": "^8.0.3",
