--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.0"
   }
 }
