--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-swagger-doc": "^0.4.0",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.1",
+    "swagger-ui-react": "^5.10.5",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
