--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
+    "react-toastify": "^9.1.3",
     "swagger-ui-react": "^5.10.5",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
