--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint" 
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
     "@phosphor-icons/react": "^2.1.3",
+    "@tippyjs/react": "^4.2.6",
     "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
@@ -26,7 +27,6 @@
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
-    "react-toastify": "^9.1.3",
     "swagger-ui-react": "^5.10.5",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
