--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@phosphor-icons/react": "^2.1.3",
     "@tippyjs/react": "^4.2.6",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "mongoose": "^8.0.3",
