--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
+    "@mercadopago/sdk-react": "^0.0.16",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
