--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cloudinary": "^1.41.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
+    "mercadopago": "^2.0.6",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
