--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "next-swagger-doc": "^0.4.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-medium-image-zoom": "^5.1.9",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "swagger-ui-react": "^5.10.5",
     "yup": "^1.3.3",
