--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
-    "@mercadopago/sdk-react": "^0.0.16",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
@@ -22,6 +21,7 @@
     "cloudinary": "^1.41.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
+    "mercadopago": "1.5.16",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
