--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "resend": "^2.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "swagger-ui-react": "^5.10.5",
