--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node -r dotenv/config src/app/api/send/index.mjs && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
     "cloudinary": "^1.41.1",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "mercadopago": "1.5.16",
