--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "swagger-ui-react": "^5.10.5",
+    "tailwindcss-animation-delay": "^1.2.0",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
